# car-mileage-log

./: .env.dev  .env.example  .gitignore  CarMileageLog.csproj  CarMileageLog.sln  Dockerfile  Gemfile  Program.cs  README.md  appsettings.json  elixir_buildpack.config  fdsaDockerfile  go.mod  main.go  manage.py  mix.exs  pyproject.toml  railway.json
Controllers/: DriveLogsController.cs  HomeController.cs  JobSitesController.cs
Data/: ApplicationDbContext.cs
Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  00000000000000_CreateIdentitySchema.cs  20241230042023_Initial.Designer.cs  20241230042023_Initial.cs  20241230042714_CreateJobSitesTable.Designer.cs  20241230042714_CreateJobSitesTable.cs  20241230053055_AddNameToJobSite.Designer.cs  20241230053055_AddNameToJobSite.cs  20241231122612_CreateDriveLog.Designer.cs  20241231122612_CreateDriveLog.cs  20241231124208_AddJobSiteIdToDriveLog.Designer.cs  20241231124208_AddJobSiteIdToDriveLog.cs  (+7 more)
FormDataModels/: EndDriveFormData.cs  StartDriveFormData.cs
Models/: ErrorViewModel.cs
Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
Properties/: launchSettings.json
ViewModels/: ErrorViewModel.cs  HomeIndexViewModel.cs
Views/: _ViewImports.cshtml
assets/: tailwind.config.js
car_mileage_log/: asgi.py  settings.py  urls.py  wsgi.py
config/: application.rb  config.exs  credentials.yml.enc  database.yml  deploy.yml  dev.exs  prod.exs  runtime.exs  test.exs
drive_log/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
lib/: phoenix_web.ex  phoenix_web_web.ex
(+52 files in other folders)
