[project]
name = "car-mileage-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "django-fastdev>=1.13.0",
    "django>=5.1.4",
    "psycopg2>=2.9.10",
    "dj-database-url>=2.3.0",
    "python-dotenv>=1.0.1",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.10",
    "django-axes>=7.0.1",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.2",
    "gevent>=24.11.1",
    "django-browser-reload>=1.17.0",
]

[dependency-groups]
dev = ["djlint>=1.36.4", "pywatchman>=2.0.0"]
